--- a/basic/animations.css
+++ b/basic/animations.css
@@ -11,6 +11,13 @@
   margin-top: 50px;
 }
 
+.box{
+  width:500px; height:100px;
+  border:solid 5px #000;
+  border-color:#000 transparent transparent transparent;
+  border-radius: 60%/100px 100px 0 0;
+}
+
 .gameOver {
   position: absolute;
   left: 50%;
